[project]
name = "spatial_dagster"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.2",
    "dagster-dbt>=0.28.2",
    "dagster-dlt>=0.28.2",
    "dagster-duckdb>=0.28.2",
    "dbt-core>=1.10.15",
    "dbt-duckdb>=1.10.0",
    "dlt[motherduck]>=0.4.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "spatial_dagster"
registry_modules = [
    "spatial_dagster.components.*",
]
